@@ -8,6 +8,8 @@ version 2.01 ()
 4. Support arguments in FCGIWrapper
 	Thank Andre Nathan for suggestion and great help on testing it.
 5. Support new config "SharememPath", which specifies the location of share memory path.
+6. Check running user is root or not, while suexec is enabled.
+	Thank Chris Holleman for the bug report.
 
 version 2.0 ( Oct 29th 2006 )
 1. Support FastCGI Authorizer protocols now.
